--- a/firmware/.cargo/config.toml
+++ b/firmware/.cargo/config.toml
@@ -1,8 +1,8 @@
-[target.'cfg(all(target_arch = "arm", target_os = "none"))']
-runner = "probe-rs run --chip RP2040 --protocol swd"
-
 [build]
 target = "thumbv6m-none-eabi"        # Cortex-M0 and Cortex-M0+
+
+[target.thumbv6m-none-eabi]
+runner = "probe-rs run --chip RP2040 --protocol swd"
 
 [env]
 DEFMT_LOG = "debug"
